--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator 'iPhone 14'",
     "start": "react-native start --reset-cache",
     "test": "jest",
     "api": "mocker ./mocker",
@@ -17,6 +17,7 @@
     "doc": "kktd @uiw/react-native-doc/doc/build"
   },
   "dependencies": {
+    "@kkt/doc": "^1.0.0",
     "@react-native-async-storage/async-storage": "~1.17.11",
     "@react-native-community/masked-view": "~0.1.11",
     "@react-navigation/bottom-tabs": "~6.3.2",
@@ -24,38 +25,43 @@
     "@react-navigation/stack": "~6.2.2",
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
+    "@shopify/restyle": "2.4.2",
     "@uiw/formatter": "~1.3.3",
     "@uiw/react-native": "^4.0.2",
-    "react": "18.1.0",
-    "react-native": "0.70.6",
+    "@uiw/react-native-doc": "^3.0.7",
+    "react": "18.2.0",
+    "react-native": "0.71.7",
     "react-native-device-info": "~10.0.2",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-reanimated": "~3.0.0",
     "react-native-safe-area-context": "~4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "13.9.0",
-    "react-redux": "7.2.6",
-    "redux": "4.1.2",
     "react-query": "~3.39.2",
-    "@kkt/doc": "^1.0.0",
-    "@uiw/react-native-doc": "^3.0.7",
-    "@shopify/restyle": "2.4.2"
+    "react-redux": "8.0.5",
+    "redux": "4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.18.9",
-    "@babel/runtime": "~7.18.9",
-    "@react-native-community/eslint-config": "3.0.3",
-    "babel-jest": "~28.1.3",
+    "@babel/core": "~7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "~7.20.0",
+    "@react-native-community/eslint-config": "3.2.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "~29.2.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "~8.21.0",
     "eslint-plugin-prettier": "~4.2.1",
-    "jest": "27.2.0",
-    "metro-react-native-babel-preset": "^0.72.3",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "husky": "^8.0.0",
+    "jest": "29.2.1",
+    "lint-staged": "~12.5.0",
+    "metro-react-native-babel-preset": "^0.73.9",
     "mocker-api": "~2.9.5",
     "prettier": "^2.8.0",
-    "lint-staged": "~12.5.0",
-    "husky": "^8.0.0",
-    "react-test-renderer": "18.1.0"
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
   "lint-staged": {
     "*.{js,jsx}": [
